--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -10,6 +10,14 @@ repositories {
 }
 
 dependencies {
+    implementation group: 'org.eclipse.jetty', name: 'jetty-server', version: '9.4.0.M0'
+    implementation group: 'org.eclipse.jetty', name: 'jetty-servlet', version: '9.4.31.v20200723'
+    implementation group: 'org.eclipse.jetty', name: 'jetty-servlets', version: '9.4.31.v20200723'
+    implementation group: 'org.eclipse.jetty', name: 'jetty-websocket', version: '8.2.0.v20160908'
+    implementation group: 'org.eclipse.jetty.websocket', name: 'websocket-server', version: '9.4.31.v20200723'
+    implementation ('io.socket:engine.io-server:1.3.5')
+    implementation ('io.socket:engine.io-server-jetty:1.3.5')
+
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.2'
 }
