--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -26,3 +26,12 @@ dependencies {
 test {
     useJUnitPlatform()
 }
+
+configurations.all {
+    exclude group: 'org.slf4j', module: 'slf4j-log4j12'
+}
+
+jar {
+    manifest { attributes "Main-Class": "Main" }
+    from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }}
+}
