--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^4.5.3",
+    "engine.io": "^3.4.2",
     "engine.io-client": "^6.1.1",
     "js-cookie": "^2.2.1",
     "react": "^17.0.2",
